--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ time, mark, audio, video {
 
 body {
     line-height:1;
+    font-family: Cormorant !important;
 }
 
 article,aside,details,figcaption,figure,
@@ -99,6 +100,14 @@ input, select {
 /*================MY STYLES==============*/
 /*Green = #2ecc71*/
 
+/* ==================FONTS===================== */
+
+
+@font-face {
+    font-family: Cormorant;
+   src: url(fonts/Cormorant-Bold.ttf); 
+}
+
 /*===========MAIN IMG STYLES==============*/
 #mainImgDiv{
     position: relative;
@@ -139,6 +148,8 @@ input, select {
 /*============NAV TOGGLE BUTTON==================*/
 nav{
     font-size: 1.4vw!important;
+    font-family: 'Dancing Script' !important;
+     font-weight: bold !important;
 }
 
 #togleButton{
@@ -336,3 +347,8 @@ display: block;
     min-height: 400px;
     background: transparent;
 }
+
+
+
+/* =======================PARTICLES SYLE SECTION==================== */
+/* ---- reset ---- */  canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%; background-color: #b61924; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
